--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="line" id="line1"></div>
             <div class="line" id="line2"></div>
             <div class="line" id="line3"></div>
+            <span>fechar</span>
         </div>
 
         <header>
@@ -50,5 +51,8 @@
         </div>
 
     </div>
+    <script src="/script.js"></script>
 </body>
+    
 </html>
+
